# 25z-zbop-projekt

./: .gitignore  README.md  model.md
code/: .env.sample  docker-compose.yml
code/back/api/: .env.example  .gitignore  Dockerfile  README.md  api_models.py  config.py  database.py  main.py  plan.md  pyproject.toml  seed_database.py  solver.py  test_solver.ipynb
code/back/api/docs/: openapi.yaml
code/back/api/middleware/: __init__.py  auth.py
code/back/api/model/: model.py
code/back/api/models/: __init__.py  base.py  distributor.py  inventory.py  office.py  optimization.py  order.py  system_parameter.py  user.py
code/back/api/repositories/: __init__.py  base.py  distributor.py  inventory.py  office.py  optimization.py  order.py  system_parameter.py  user.py
code/back/api/routers/: __init__.py  auth.py  offices.py  optimization.py  orders.py  predictions.py  settings.py
code/back/api/schemas/: __init__.py  auth.py  common.py  office.py  optimization.py  order.py  settings.py
code/back/api/services/: __init__.py  auth.py  inventory.py  office.py  optimization.py  order.py  settings.py
code/back/api/v2/: solver_v2.py  solver_v2_correction.py
code/database/: schema.dbml
code/front/zbop-front/: .eslintignore  .eslintrc.cjs  Dockerfile  jest.config.ts  package-lock.json  package.json  plan.md
code/front/zbop-front/public/: index.html
code/front/zbop-front/src/components/auth/: ProtectedRoute.tsx
code/front/zbop-front/src/components/form/: Form.tsx  messages.ts  styles.scss  utils.tsx
code/front/zbop-front/src/components/layout/: MainLayout.tsx  Navbar.tsx  messages.ts  styles.scss
code/front/zbop-front/src/components/predictionResults/: PredictionResult.tsx  index.ts  styles.scss
code/front/zbop-front/src/config/: api.ts
code/front/zbop-front/src/context/: AuthContext.tsx
code/front/zbop-front/src/hooks/: useAuth.ts
code/front/zbop-front/src/pages/: App.tsx
code/front/zbop-front/src/pages/auth/: Login.tsx  Register.tsx  messages.ts  styles.scss
code/front/zbop-front/src/pages/create-prediction/: CreatePrediction.tsx  styles.scss  utils.tsx
code/front/zbop-front/src/pages/orders/: EditOrder.tsx  OrdersList.tsx  index.ts  messages.ts  styles.scss
code/front/zbop-front/src/services/: api.ts  auth.ts  optimization.ts  orders.ts
code/front/zbop-front/src/types/: auth.ts  common.ts  index.ts  optimization.ts  orders.ts
code/front/zbop-front/src/utils/: cookies.ts
reports/: .gitignore
reports/final/: Makefile  main.tex
reports/mid_semester/: main.tex
reports/prezentacja_organizacyjna/: prezentacja_organizacyjna.md
testy_modeli/: model.mod  progi_rabatowe.py  solve_tests.py  wizualizacje.py
